<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/tvLocationAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        style="@style/TextViewNormal"

      />

    <TextView
        android:id="@+id/tvMomentAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moment"
        style="@style/TextViewNormal"
        />

    <TextView
        android:id="@+id/tvShortDescriptionAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriere"
        style="@style/TextViewNormal"
      />

</LinearLayout>