<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowCountriesActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tari_vizitate"
        style="@style/TextViewTitle"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSearchByContinent"
        android:layout_margin="10dp"
        android:hint="@string/continentul_dupa_care_se_face_cautarea"
     />

    <Button
        android:id="@+id/btnSearchByContinet"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cauta"
        style="@style/ButtonTravellingstyle"
      />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSearchByPopulation"
        android:layout_margin="10dp"
        android:hint="@string/tari_cu_populatia_mai_mare_decat"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnSearchByPopulation"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cauta"
        style="@style/ButtonTravellingstyle"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvVisitedCountries"
        android:layout_margin="5dp"
        />

</LinearLayout>