<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvCountryIdAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        style="@style/TextViewNormal"
        />
    <TextView
        android:id="@+id/tvNameCountryAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moment"
        style="@style/TextViewNormal"
        />
    <TextView
        android:id="@+id/tvLanguageAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriere"
        style="@style/TextViewNormal"
        />
    <TextView
        android:id="@+id/tvCapitalAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriere"
        style="@style/TextViewNormal"
        />
    <TextView
        android:id="@+id/tvReligionAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriere"
        style="@style/TextViewNormal"
        />
    <TextView
        android:id="@+id/tvPopulationAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriere"
        style="@style/TextViewNormal"
        />
    <TextView
        android:id="@+id/tvContinentAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriere"
        style="@style/TextViewNormal"
        />

</LinearLayout>